--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -84,15 +84,27 @@
 
 - name: set provisioning host and ocp cluster info
   block:
-    - name: set provisioner hostname
+    - name: set provisioner hostname & index
       set_fact:
         provisioner_hostname: "{{ ocpinv_content.nodes[0].pm_addr | replace('mgmt-','') | replace('-drac', '') }}"
+        prov_index: 0
+      when: provisioner_hostname is not defined or provisioner_hostname == ""
+
+    - block:
+      - name: set 'pm_addr' for the specified hostname
+        set_fact:
+          prov_node: "mgmt-{{ provisioner_hostname }}"
+
+      - name: set provisioner hostname index
+        set_fact:
+          prov_index: "{{ lookup('ansible.utils.index_of', data=ocpinv_content.nodes, test='eq', key='pm_addr', value=prov_node) }}"
+      when: provisioner_hostname is defined and provisioner_hostname != ""    
 
     - name: set ocp_node_content
       set_fact:
           ocp_node_content: |
               {% set a=ocpinv_content.pop('nodes') %}
-              {{ ocpinv_content | combine({'nodes': a|difference([a[0]])}, recursive=True) }}
+              {{ ocpinv_content | combine({'nodes': a|difference([a[prov_index|int]])}, recursive=True) }}
 
 - block:
     - name: set provisioner_type
