--- a/ansible-ipi-install/roles/bootstrap/files/Dockerfile
+++ b/ansible-ipi-install/roles/bootstrap/files/Dockerfile
@@ -1,16 +1,16 @@
-FROM docker.io/centos:centos7
+FROM centos:8
 ARG foreman_url=https://foreman.example.com
 RUN yum install -y epel-release \
-    https://yum.theforeman.org/releases/2.1/el7/x86_64/foreman-release.rpm \
-    centos-release-scl-rh \
-    rh-ruby25-ruby
+        python3
 
-RUN yum install -y tfm-rubygem-hammer_cli \
-    tfm-rubygem-hammer_cli_foreman
+RUN yum install -y https://yum.theforeman.org/releases/2.1/el8/x86_64/foreman-release.rpm
+RUN yum install -y https://yum.theforeman.org/releases/2.1/el8/x86_64/rubygem-hammer_cli-2.1.0-1.el8.noarch.rpm 
+RUN yum install -y http://yum.theforeman.org/releases/2.1/el8/x86_64/rubygem-hammer_cli_foreman-2.1.0-2.el8.noarch.rpm
 
-RUN yum install -y python-pip \
-    && pip install j2cli
+RUN yum install -y rubygem-hammer_cli \
+	rubygem-hammer_cli_foreman
 
+RUN pip3 install j2cli
 RUN  hammer --fetch-ca-cert ${foreman_url}
 COPY foreman.yml.j2 /root/
 RUN j2 /root/foreman.yml.j2 > /etc/hammer/cli.modules.d/foreman.yml
