ci user privileges and fixes

--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -122,6 +122,7 @@
   copy:
     dest: "/tmp/metadata.txt"
     content: "{{ lookup('template', 'node_inv.j2') | to_nice_json  }}"
+  become: true
   vars:
     query: nodes[0:3]
     node: master
@@ -152,6 +153,7 @@
   copy:
     dest: "/tmp/metadata.txt"
     content: "{{ lookup('template', 'node_inv.j2') | to_nice_json  }}"
+  become: true
   vars:
     query: nodes[3:{{worker_index}}]
     node: worker
