Default to OVN local gateway mode
We need this because from 4.8+ shared gateway mode is set by default yet
for BM deployments we care about local gateway mode.

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -348,6 +348,17 @@
       when:
         - network_type == "OVNKubernetes" 
         - ovn_hybird_plugin | bool     
+
+    - name: Enable OVN local gateway mode
+      copy:
+        src: "{{ item }}"
+        dest: "{{ manifest_path }}/{{ item }}"
+        mode: 0644
+      with_items:
+        - "99_local_gateway_ovn.yaml"
+      when:
+        - network_type == "OVNKubernetes"
+        - ovn_local_gateway is defined and ovn_local_gateway | bool
   delegate_to: localhost
 
 - name: Copy the approve_csr script from the local machine to the remote server
