--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -361,12 +361,12 @@
         - ovn_local_gateway is defined and ovn_local_gateway | bool
 
     - name: Copy SCTP module manifest files
-      copy:
+      template:
         src: "{{ item }}"
         dest: "{{ manifest_path }}/{{ item }}"
         mode: 0644
       with_items:
-        - "99_sctp-module.yaml"
+        - "ocp4-lab.machineconfig.yml.j2"
       when:
         - sctp | bool
 
