--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -359,6 +359,17 @@
       when:
         - network_type == "OVNKubernetes"
         - ovn_local_gateway is defined and ovn_local_gateway | bool
+
+    - name: Copy SCTP module manifest files
+      template:
+        src: "{{ item }}"
+        dest: "{{ manifest_path }}/{{ item }}"
+        mode: 0644
+      with_items:
+        - "ocp4-lab.machineconfig.yml.j2"
+      when:
+        - sctp | bool
+
   delegate_to: localhost
 
 - name: Copy the approve_csr script from the local machine to the remote server
