--- a/ansible-ipi-install/roles/bootstrap/tasks/01_install_packages.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/01_install_packages.yml
@@ -4,4 +4,4 @@
   become: true
 
 - name: install ansible galaxy plugin
-  shell: "ansible-galaxy collection install ansible.utils"
+  shell: "ansible-galaxy collection install ansible.utils containers.podman"
